# trade

./: .gitignore  Dockerfile  balances.py  binance.yaml  bot.py  bot_requirements.txt  btc_historical_csv.py  build.sh  buy_bnb.py  create_order.py  day_trade.py  day_trade_model.py  day_trade_org.py  docker-compose.yml  get_list.py  github.md  indicators.py  latest_btc_price.py  log.txt  none  ollama.md  pyproject.toml  python.code-workspace  record.py  requirements.txt  run.py  scale0.yaml  scale1.yaml  stream.py  test_check_btc.py  thread_get_list.py  trade_pair.csv  tradebot.py  wilders_rsi_pandas.py
.github/workflows/: docker-image.yml
