[project]
name = "trade"
version = "0.1.0"
description = "binance trading bot"
authors = [
    {name = "Jason Zhou",email = "jaszhou@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
